# wisentr

./: .gitmodules  CMakeLists.txt  LICENSE
cmake/: FindSoup.cmake  Findgcrypt.cmake
flicksoup/: CMakeLists.txt  Makefile.in  config.h
src/: example.c  files.cpp  files.h  flickr.cpp  flickr.h  log.h  main.cpp  ui.cpp  ui.h
test/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
